2005-10-23  Miles Bader  <miles@gnu.org>

	* .arch-inventory: New file.

2005-10-23  Bill Wohler  <wohler@newt.com>

	* mh-customize.el (mh-interpret-number-as-range-flag): Sync
	docstring with manual.

	* mh-identity.el (mh-assoc-ignore-case): Merge with version in
	mh-alias.el and move to mh-acros.el

	* mh-alias.el (mh-assoc-ignore-case): Merge with version in
	mh-identity.el and move to mh-acros.el

	* mh-acros.el (mh-assoc-ignore-case): Merge of function from
	mh-identity.el and mh-alias.el.

	* mh-mime.el: Autoload mm-uu for mm-uu-dissect to avoid compiler
	warning in Emacs 22.

2005-10-23  Satyaki Das  <satyaki@theforce.stanford.edu>

	* mh-identity.el (mh-assoc-ignore-case): New macro that uses
	assoc-string (if the function is available) and falls back on
	assoc-ignore-case if assoc-string is not found.
	(mh-identity-field-handler): Use mh-assoc-ignore-case since
	assoc-ignore-case is a obsolete function in Emacs 22.

	* mh-e.el (mh-folder-buttons-init-flag): New variable that keeps
	track of whether the tool-bar in mh-folder-mode has been
	initialized yet.
	(mh-folder-mode): Initialize the tool-bar for folders the first
	time we get into mh-letter-mode.

	* mh-customize.el (mh-buffer-exists-p): New function which tests
	presence of buffers of a given mode.
	(mh-tool-bar-define): New functions
	mh-tool-bar-folder-buttons-init and
	mh-tool-bar-letter-buttons-init are defined. These functions are
	used to create the tool-bar from the corresponding customizable
	variables.

	* mh-comp.el (mh-letter-buttons-init-flag): New variable that
	keeps track of whether the tool-bar in mh-letter-mode has been
	initialized yet.
	(mh-letter-mode): Initialize the tool-bar for drafts the first
	time we get into mh-letter-mode.

2005-10-23  Bill Wohler  <wohler@newt.com>

	* mh-comp.el (mh-letter-menu): Rename
	mh-mhn-compose-external-compressed-tar to
	mh-mh-compose-external-compressed-tar. Rename
	mh-mhn-compose-anon-ftp to mh-mh-compose-anon-ftp. Rename