@@ -48,12 +48,6 @@
 (autoload 'gnus-get-buffer-create "gnus")
 (autoload 'message-options-set-recipient "message")
 (autoload 'mm-uu-dissect "mm-uu")
-(autoload 'mml-attach-file "mml")
-(autoload 'mml-insert-empty-tag "mml")
-(autoload 'mml-minibuffer-read-description "mml")
-(autoload 'mml-minibuffer-read-disposition "mml")
-(autoload 'mml-minibuffer-read-file "mml")
-(autoload 'mml-to-mime "mml")
 (autoload 'mml-unsecure-message "mml-sec")
 (autoload 'rfc2047-decode-region "rfc2047")
 (autoload 'widget-convert-button "wid-edit")
