@@ -1,3 +1,11 @@
+2005-10-24  Bill Wohler  <wohler@newt.com>
+
+	* mh-gnus.el: Load mml.el in order to see if
+	mml-minibuffer-read-disposition is defined or not.
+
+	* mh-mime.el: Now that mh-gnus.el loads mml, we shouldn't need the
+	mml autoloads.
+
 2005-10-23  Miles Bader  <miles@gnu.org>
 
 	* .arch-inventory: New file.
